@@ -1,0 +1,9 @@
+package main;
+
+public class ConfigOption
+{
+	public static final String MUTE_ON_FREEZE = "mute-on-freeze";
+	public static final String KICK_ON_FREEZE = "kick-on-freeze";
+	public static final String MUTE_MESSAGE = "mute-message";
+	public static final String KICK_MESSAGE = "kick-message";
+}
