@@ -1,4 +1,6 @@
 1.5.1
+Added: Config option 'mute-message'
+Added: Config option 'kick-message'
 Change: /freeze is a toggle
 Removed: /unfreeze
 
